--- a/app/src/main/res/layout-land/activity_worker.xml
+++ b/app/src/main/res/layout-land/activity_worker.xml
@@ -50,103 +50,80 @@
 
         </LinearLayout>//WorkerUserName WorkerDateTime
 
-        <ScrollView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <Button
+                android:id="@+id/WorkerDateLeaveConfirm"
+                android:layout_width="130sp"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:text="@string/WorkerLeave"
+                android:textSize="20sp">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center">
+            </Button>//WorkerDateLeaveConfirm
 
-                    <Button
-                        android:id="@+id/WorkerDateLeaveConfirm"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/WorkerLeave"
-                        android:textSize="20sp">
+            <EditText
+                android:id="@+id/WorkerDateLeave"
+                android:layout_width="160sp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:inputType="date"
+                android:maxLines="1"
+                android:imeOptions="actionGo"
+                android:textAlignment="center"
+                android:textColor="@color/White"
+                android:textSize="25sp"
+                android:hint="@string/DATE"
+                android:textColorHint="@color/Gray"
+                android:background="@color/BlackTransparent">
 
-                    </Button>//WorkerDateLeaveConfirm
+            </EditText>//WorkerDateLeave
 
-                    <EditText
-                        android:id="@+id/WorkerDateLeave"
-                        android:layout_width="160sp"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:inputType="date"
-                        android:maxLines="1"
-                        android:imeOptions="actionGo"
-                        android:textAlignment="center"
-                        android:textColor="@color/White"
-                        android:textSize="25sp"
-                        android:hint="@string/DATE"
-                        android:textColorHint="@color/Gray"
-                        android:background="@color/BlackTransparent">
+        </LinearLayout>//WorkerDateLeave/Confirm
 
-                    </EditText>//WorkerDateLeave
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
 
-                </LinearLayout>//WorkerDateLeave/Confirm
+            <Button
+                android:id="@+id/WorkerDateVacationConfirm"
+                android:layout_width="130sp"
+                android:layout_height="wrap_content"
+                android:text="@string/WorkerVacation"
+                android:textSize="20sp">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center">
+            </Button>//WorkerDateLeaveConfirm
 
-                    <Button
-                        android:id="@+id/WorkerDateVacationConfirm"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/WorkerVacation"
-                        android:textSize="20sp">
+            <EditText
+                android:id="@+id/WorkerDateVacation"
+                android:layout_width="160sp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:inputType="date"
+                android:maxLines="1"
+                android:imeOptions="actionGo"
+                android:textAlignment="center"
+                android:textColor="@color/White"
+                android:textSize="25sp"
+                android:hint="@string/DATE"
+                android:textColorHint="@color/Gray"
+                android:background="@color/BlackTransparent">
 
-                    </Button>//WorkerDateLeaveConfirm
+            </EditText>//WorkerDateLeave
 
-                    <EditText
-                        android:id="@+id/WorkerDateVacation"
-                        android:layout_width="160sp"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:inputType="date"
-                        android:maxLines="1"
-                        android:imeOptions="actionGo"
-                        android:textAlignment="center"
-                        android:textColor="@color/White"
-                        android:textSize="25sp"
-                        android:hint="@string/DATE"
-                        android:textColorHint="@color/Gray"
-                        android:background="@color/BlackTransparent">
+        </LinearLayout>//WorkerDateVacation/Confirm
 
-                    </EditText>//WorkerDateLeave
+        <ListView
+            android:id="@+id/WorkerProgramListView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-                </LinearLayout>//WorkerDateVacation/Confirm
+        </ListView>
 
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5sp"
-                    android:gravity="center">
-
-                    <TextView
-                        android:id="@+id/WorkerProgramVisualizer"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@color/BlackTransparent"
-                        android:textSize="20sp"
-                        android:textColor="@color/White"
-                        android:text="@string/Test">
-                    </TextView>
-
-                </LinearLayout>//WorkerProgramVisualizer
-
-            </LinearLayout>You can touch this
-        </ScrollView>//Scroll
     </LinearLayout>//Main Linear
 </LinearLayout>
