--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
 
     <color name="BlackTransparent">#55000000</color>
+    <color name="Black">#000000</color>
     <color name="White">#ffffff</color>
     <color name="Gray">#808080</color>
     <color name="Blue">#296d98</color>
