Remove AWP Valve

--- a/app/src/main/res/layout-xlarge-land/activity_log_reg.xml
+++ b/app/src/main/res/layout-xlarge-land/activity_log_reg.xml
@@ -896,20 +896,17 @@
                         </LinearLayout>//WorkHours
 
                         <LinearLayout
-                            android:id="@+id/RegisterShiftTypeForm"
                             android:layout_width="300sp"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
                             android:layout_gravity="center"
-                            android:visibility="visible">
+                            android:visibility="invisible">
 
                             <TextView
-                                android:id="@+id/RegisterShiftTypeTranslate"
                                 android:layout_width="125sp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="15sp"
                                 android:textColor="@color/White"
-                                android:text="@string/RegisterShiftType"
                                 android:textAlignment="center"
                                 android:textSize="20sp"
                                 android:gravity="center_horizontal">
@@ -917,19 +914,16 @@
                             </TextView>
 
                             <EditText
-                                android:id="@+id/RegisterShiftType"
                                 android:layout_width="160sp"
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
-                                android:inputType="text"
-                                android:focusable="false"
-                                android:clickable="false"
                                 android:maxLines="1"
                                 android:imeOptions="actionDone"
                                 android:textAlignment="center"
                                 android:textColor="@color/White"
                                 android:textSize="25sp"
-                                android:background="@color/BlackTransparent">
+                                android:background="@color/BlackTransparent"
+                                android:visibility="invisible">
 
                             </EditText>
 
