--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="Blue">#296d98</color>
     <color name="Green">#008000</color>
     <color name="Red">#ff0000</color>
+    <color name="Yellow">#ffff00</color>
 </resources>
