--- a/app/src/main/res/layout-xlarge-port/activity_owsla_worker.xml
+++ b/app/src/main/res/layout-xlarge-port/activity_owsla_worker.xml
@@ -717,7 +717,8 @@
                             android:layout_width="300sp"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
-                            android:layout_gravity="center">
+                            android:layout_gravity="center"
+                            android:visibility="invisible">
 
                             <TextView
                                 android:layout_width="125sp"
@@ -732,7 +733,6 @@
                             </TextView>
 
                             <EditText
-                                android:id="@+id/OWSLAWorkerShiftType"
                                 android:layout_width="160sp"
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
