--- a/app/src/main/res/layout-port/activity_owsla_program.xml
+++ b/app/src/main/res/layout-port/activity_owsla_program.xml
@@ -714,6 +714,7 @@
                     </LinearLayout>//2
 
                     <LinearLayout
+                        android:visibility="gone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5sp"
@@ -753,6 +754,7 @@
                     </LinearLayout>//3
 
                     <LinearLayout
+                        android:visibility="gone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5sp"
@@ -792,6 +794,7 @@
                     </LinearLayout>//4
 
                     <LinearLayout
+                        android:visibility="gone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5sp"
