--- a/app/src/main/res/layout-xlarge-land/activity_owsla_program.xml
+++ b/app/src/main/res/layout-xlarge-land/activity_owsla_program.xml
@@ -713,6 +713,7 @@
                     </LinearLayout>//2
 
                     <LinearLayout
+                        android:visibility="gone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5sp"
@@ -752,6 +753,7 @@
                     </LinearLayout>//3
 
                     <LinearLayout
+                        android:visibility="gone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5sp"
@@ -791,6 +793,7 @@
                     </LinearLayout>//4
 
                     <LinearLayout
+                        android:visibility="gone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5sp"
