--- a/app/src/main/res/layout-xlarge-port/activity_owsla_program.xml
+++ b/app/src/main/res/layout-xlarge-port/activity_owsla_program.xml
@@ -712,6 +712,7 @@
                         </LinearLayout>//2
 
                         <LinearLayout
+                            android:visibility="gone"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5sp"
@@ -751,6 +752,7 @@
                         </LinearLayout>//3
 
                         <LinearLayout
+                            android:visibility="gone"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5sp"
@@ -790,6 +792,7 @@
                         </LinearLayout>//4
 
                         <LinearLayout
+                            android:visibility="gone"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5sp"
