--- a/app/src/main/res/layout/adapter_worker_program.xml
+++ b/app/src/main/res/layout/adapter_worker_program.xml
@@ -25,7 +25,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="dd-mm-yyyy"
-                android:textColor="@color/Black"
+                android:textColor="@color/White"
                 android:textStyle="bold">
 
             </TextView>
@@ -58,18 +58,18 @@
                         android:layout_marginRight="10sp"
                         android:gravity="center"
                         android:textStyle="bold"
-                        android:textColor="@color/Black"
+                        android:textColor="@color/White"
                         android:text="@string/WorkerName">
 
                     </TextView>
 
                     <TextView
                         android:id="@+id/WorkerAdapterWorkerID"
-                        android:layout_width="200sp"
+                        android:layout_width="150sp"
                         android:layout_height="match_parent"
                         android:gravity="center"
                         android:text="Worker id"
-                        android:textColor="@color/Black">
+                        android:textColor="@color/White">
 
                     </TextView>
 
@@ -87,18 +87,18 @@
                         android:layout_marginRight="10sp"
                         android:gravity="center"
                         android:textStyle="bold"
-                        android:textColor="@color/Black"
+                        android:textColor="@color/White"
                         android:text="@string/WorkerTeamName">
 
                     </TextView>
 
                     <TextView
                         android:id="@+id/WorkerAdapterTeamID"
-                        android:layout_width="200sp"
+                        android:layout_width="150sp"
                         android:layout_height="match_parent"
                         android:gravity="center"
                         android:text="Team ID"
-                        android:textColor="@color/Black">
+                        android:textColor="@color/White">
 
                     </TextView>
 
@@ -125,20 +125,20 @@
                         android:layout_marginRight="10sp"
                         android:gravity="center"
                         android:textStyle="bold"
-                        android:textColor="@color/Black"
+                        android:textColor="@color/White"
                         android:text="@string/WorkerShiftType">
 
                     </TextView>
 
                     <TextView
                         android:id="@+id/WorkerAdapterShiftID"
-                        android:layout_width="200sp"
+                        android:layout_width="150sp"
                         android:layout_height="match_parent"
                         android:gravity="center"
                         android:text="Shift type"
                         android:textStyle="italic"
                         android:textSize="14sp"
-                        android:textColor="@color/Black">
+                        android:textColor="@color/White">
 
                     </TextView>
 
@@ -156,17 +156,17 @@
                         android:layout_marginRight="10sp"
                         android:gravity="center"
                         android:textStyle="bold"
-                        android:textColor="@color/Black"
+                        android:textColor="@color/White"
                         android:text="@string/WorkerTilVacation">
 
                     </TextView>
                     <TextView
                         android:id="@+id/WorkerAdapterTilVacation"
-                        android:layout_width="200sp"
+                        android:layout_width="150sp"
                         android:layout_height="match_parent"
                         android:gravity="center"
                         android:text="Days Til Vacation"
-                        android:textColor="@color/Black">
+                        android:textColor="@color/White">
 
                     </TextView>
 
