--- a/app/src/main/res/layout-xlarge-land/activity_owsla_program.xml
+++ b/app/src/main/res/layout-xlarge-land/activity_owsla_program.xml
@@ -713,7 +713,7 @@
                     </LinearLayout>//2
 
                     <LinearLayout
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5sp"
@@ -753,7 +753,7 @@
                     </LinearLayout>//3
 
                     <LinearLayout
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5sp"
@@ -793,7 +793,7 @@
                     </LinearLayout>//4
 
                     <LinearLayout
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5sp"
