--- a/app/src/main/res/layout-xlarge-land/activity_owsla_worker.xml
+++ b/app/src/main/res/layout-xlarge-land/activity_owsla_worker.xml
@@ -569,6 +569,124 @@
 
                     </LinearLayout>//Fourth Row
                     <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10sp"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+
+                    <LinearLayout
+                        android:layout_width="300sp"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center">
+
+                        <TextView
+                            android:layout_width="125sp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="15sp"
+                            android:textColor="@color/White"
+                            android:text="@string/RegisterBirthDate"
+                            android:textAlignment="center"
+                            android:textSize="20sp"
+                            android:gravity="center_horizontal">
+
+                        </TextView>
+
+                        <EditText
+                            android:id="@+id/OWSLAWorkerBirthDate"
+                            android:layout_width="160sp"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:inputType="date"
+                            android:maxLines="1"
+                            android:imeOptions="actionNext"
+                            android:textAlignment="center"
+                            android:textColor="@color/White"
+                            android:textSize="25sp"
+                            android:hint="@string/DATE"
+                            android:textColorHint="@color/Gray"
+                            android:background="@color/BlackTransparent">
+
+                        </EditText>
+
+                    </LinearLayout>//BirthDate
+
+                    <LinearLayout
+                        android:layout_width="300sp"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center">
+
+                        <TextView
+                            android:layout_width="125sp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="15sp"
+                            android:textColor="@color/White"
+                            android:text="@string/RegisterNationality"
+                            android:textAlignment="center"
+                            android:textSize="20sp"
+                            android:gravity="center_horizontal">
+
+                        </TextView>
+
+                        <EditText
+                            android:id="@+id/OWSLAWorkerNationality"
+                            android:layout_width="160sp"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:inputType="phone"
+                            android:maxLines="1"
+                            android:imeOptions="actionNext"
+                            android:textAlignment="center"
+                            android:textColor="@color/White"
+                            android:textSize="25sp"
+                            android:background="@color/BlackTransparent">
+
+                        </EditText>
+
+                    </LinearLayout>//Ethnicity
+
+                    <LinearLayout
+                        android:layout_width="300sp"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center">
+
+                        <TextView
+                            android:layout_width="125sp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="15sp"
+                            android:textColor="@color/White"
+                            android:text="@string/RegisterWorkHours"
+                            android:textAlignment="center"
+                            android:textSize="20sp"
+                            android:gravity="center_horizontal">
+
+                        </TextView>
+
+                        <EditText
+                            android:id="@+id/OWSLAWorkerWorkHours"
+                            android:layout_width="160sp"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:inputType="none"
+                            android:clickable="false"
+                            android:focusable="false"
+                            android:maxLines="1"
+                            android:imeOptions="actionNext"
+                            android:textAlignment="center"
+                            android:textColor="@color/White"
+                            android:textSize="25sp"
+                            android:background="@color/BlackTransparent">
+
+                        </EditText>
+
+                    </LinearLayout>//WorkHours
+
+                </LinearLayout>//Fifth Row
+
+                <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10sp"
@@ -576,10 +694,48 @@
                         android:gravity="center">
 
                         <LinearLayout
+                        android:layout_width="300sp"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center">
+
+                        <TextView
+                            android:layout_width="125sp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="15sp"
+                            android:textColor="@color/White"
+                            android:text="@string/RegisterShiftType"
+                            android:textAlignment="center"
+                            android:textSize="20sp"
+                            android:gravity="center_horizontal">
+
+                        </TextView>
+
+                        <EditText
+                            android:id="@+id/OWSLAWorkerShiftType"
+                            android:layout_width="160sp"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:inputType="none"
+                            android:clickable="false"
+                            android:focusable="false"
+                            android:maxLines="1"
+                            android:imeOptions="actionGo"
+                            android:textAlignment="center"
+                            android:textColor="@color/White"
+                            android:textSize="25sp"
+                            android:background="@color/BlackTransparent">
+
+                        </EditText>
+
+                    </LinearLayout>//ShiftType
+
+                        <LinearLayout
                             android:layout_width="300sp"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
-                            android:gravity="center">
+                            android:gravity="center"
+                            android:visibility="invisible">
 
                             <TextView
                                 android:layout_width="125sp"
@@ -594,7 +750,6 @@
                             </TextView>
 
                             <EditText
-                                android:id="@+id/OWSLAWorkerBirthDate"
                                 android:layout_width="160sp"
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
@@ -610,13 +765,14 @@
 
                             </EditText>
 
-                        </LinearLayout>//BirthDate
+                        </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="300sp"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
-                            android:gravity="center">
+                            android:gravity="center"
+                            android:visibility="invisible">
 
                             <TextView
                                 android:layout_width="125sp"
@@ -631,7 +787,6 @@
                             </TextView>
 
                             <EditText
-                                android:id="@+id/OWSLAWorkerNationality"
                                 android:layout_width="160sp"
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
@@ -645,45 +800,9 @@
 
                             </EditText>
 
-                        </LinearLayout>//Ethnicity
+                        </LinearLayout>
 
-                        <LinearLayout
-                            android:layout_width="300sp"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:gravity="center">
-
-                            <TextView
-                                android:layout_width="125sp"
-                                android:layout_height="wrap_content"
-                                android:layout_marginRight="15sp"
-                                android:textColor="@color/White"
-                                android:text="@string/RegisterWorkHours"
-                                android:textAlignment="center"
-                                android:textSize="20sp"
-                                android:gravity="center_horizontal">
-
-                            </TextView>
-
-                            <EditText
-                                android:id="@+id/OWSLAWorkerWorkHours"
-                                android:layout_width="160sp"
-                                android:layout_height="wrap_content"
-                                android:gravity="center"
-                                android:inputType="none"
-                                android:clickable="false"
-                                android:maxLines="1"
-                                android:imeOptions="actionNext"
-                                android:textAlignment="center"
-                                android:textColor="@color/White"
-                                android:textSize="25sp"
-                                android:background="@color/BlackTransparent">
-
-                            </EditText>
-
-                        </LinearLayout>//WorkHours
-
-                    </LinearLayout>//Fifth Row
+                    </LinearLayout>//Sixth Row
 
                     <LinearLayout
                         android:layout_width="match_parent"
