--- a/app/src/main/res/layout-xlarge-port/activity_log_reg.xml
+++ b/app/src/main/res/layout-xlarge-port/activity_log_reg.xml
@@ -223,7 +223,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:visibility="visible">
+                android:visibility="gone">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -918,6 +918,97 @@
                     </LinearLayout>//WorkHours
 
                 </LinearLayout>//Eighth Row
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10sp"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+
+                    <LinearLayout
+                        android:id="@+id/RegisterShiftTypeForm"
+                        android:layout_width="300sp"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center"
+                        android:visibility="visible">
+
+                        <TextView
+                            android:layout_width="125sp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="15sp"
+                            android:textColor="@color/White"
+                            android:text="@string/RegisterShiftType"
+                            android:textAlignment="center"
+                            android:textSize="20sp"
+                            android:gravity="center_horizontal">
+
+                        </TextView>
+
+                        <EditText
+                            android:id="@+id/RegisterShiftType"
+                            android:layout_width="160sp"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:inputType="number"
+                            android:maxLines="1"
+                            android:imeOptions="actionDone"
+                            android:textAlignment="center"
+                            android:textColor="@color/White"
+                            android:textSize="25sp"
+                            android:background="@color/BlackTransparent">
+
+                        </EditText>
+
+                    </LinearLayout>//ShiftType
+
+                    <LinearLayout
+                        android:layout_width="300sp"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center"
+                        android:visibility="invisible">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal"
+                            android:visibility="visible">
+
+                            <TextView
+                                android:layout_width="125sp"
+                                android:layout_height="wrap_content"
+                                android:layout_marginRight="15sp"
+                                android:textColor="@color/White"
+                                android:text="@string/RegisterWorkHours"
+                                android:textAlignment="center"
+                                android:textSize="20sp"
+                                android:gravity="center_horizontal">
+
+                            </TextView>
+
+                            <EditText
+                                android:layout_width="160sp"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:inputType="number"
+                                android:focusable="false"
+                                android:clickable="false"
+                                android:maxLines="1"
+                                android:imeOptions="actionNext"
+                                android:textAlignment="center"
+                                android:textColor="@color/White"
+                                android:textSize="25sp"
+                                android:background="@color/BlackTransparent">
+
+                            </EditText>
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                </LinearLayout>//Ninth Row
 
                 <LinearLayout
                     android:layout_width="match_parent"
