--- a/app/src/main/res/layout-xlarge-port/activity_owsla_program.xml
+++ b/app/src/main/res/layout-xlarge-port/activity_owsla_program.xml
@@ -712,7 +712,7 @@
                         </LinearLayout>//2
 
                         <LinearLayout
-                            android:visibility="gone"
+                            android:visibility="visible"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5sp"
@@ -752,7 +752,7 @@
                         </LinearLayout>//3
 
                         <LinearLayout
-                            android:visibility="gone"
+                            android:visibility="visible"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5sp"
@@ -792,7 +792,7 @@
                         </LinearLayout>//4
 
                         <LinearLayout
-                            android:visibility="gone"
+                            android:visibility="visible"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5sp"
