--- a/app/src/main/res/layout-xlarge-port/activity_owsla_worker.xml
+++ b/app/src/main/res/layout-xlarge-port/activity_owsla_worker.xml
@@ -702,6 +702,7 @@
                                 android:gravity="center"
                                 android:inputType="none"
                                 android:clickable="false"
+                                android:focusable="false"
                                 android:maxLines="1"
                                 android:imeOptions="actionNext"
                                 android:textAlignment="center"
@@ -717,8 +718,7 @@
                             android:layout_width="300sp"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
-                            android:layout_gravity="center"
-                            android:visibility="invisible">
+                            android:layout_gravity="center">
 
                             <TextView
                                 android:layout_width="125sp"
@@ -733,11 +733,13 @@
                             </TextView>
 
                             <EditText
+                                android:id="@+id/OWSLAWorkerShiftType"
                                 android:layout_width="160sp"
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
                                 android:inputType="none"
                                 android:clickable="false"
+                                android:focusable="false"
                                 android:maxLines="1"
                                 android:imeOptions="actionDone"
                                 android:textAlignment="center"
