--- a/app/src/main/res/layout/activity_log_reg.xml
+++ b/app/src/main/res/layout/activity_log_reg.xml
@@ -990,6 +990,53 @@
 
                         </LinearLayout>//sixteenth Row
 
+                        <LinearLayout
+                            android:id="@+id/RegisterShiftTypeForm"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10sp"
+                            android:orientation="horizontal"
+                            android:gravity="center"
+                            android:visibility="visible">
+
+                            <LinearLayout
+                                android:layout_width="300sp"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:gravity="center">
+
+                                <TextView
+                                    android:layout_width="125sp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginRight="15sp"
+                                    android:textColor="@color/White"
+                                    android:text="@string/RegisterWorkHours"
+                                    android:textAlignment="center"
+                                    android:textSize="20sp"
+                                    android:gravity="center_horizontal">
+
+                                </TextView>
+
+                                <EditText
+                                    android:id="@+id/RegisterShiftType"
+                                    android:layout_width="160sp"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:inputType="number"
+                                    android:focusable="false"
+                                    android:clickable="false"
+                                    android:maxLines="1"
+                                    android:imeOptions="actionGo"
+                                    android:textAlignment="center"
+                                    android:textColor="@color/White"
+                                    android:textSize="25sp"
+                                    android:background="@color/BlackTransparent">
+
+                                </EditText>
+
+                            </LinearLayout>//ShiftType
+
+                        </LinearLayout>//Seventeenth Row
 
                     </LinearLayout>
 
