--- a/app/src/main/res/layout/activity_owsla_program.xml
+++ b/app/src/main/res/layout/activity_owsla_program.xml
@@ -710,7 +710,7 @@
                     </LinearLayout>//2
 
                     <LinearLayout
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5sp"
@@ -750,7 +750,7 @@
                     </LinearLayout>//3
 
                     <LinearLayout
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5sp"
@@ -790,7 +790,7 @@
                     </LinearLayout>//4
 
                     <LinearLayout
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5sp"
