--- a/app/src/main/res/layout/activity_owsla_worker.xml
+++ b/app/src/main/res/layout/activity_owsla_worker.xml
@@ -784,6 +784,51 @@
 
                         </LinearLayout>//sixteenth Row
 
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10sp"
+                            android:orientation="horizontal"
+                            android:gravity="center">
+
+                            <LinearLayout
+                                android:layout_width="300sp"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:gravity="center">
+
+                                <TextView
+                                    android:layout_width="125sp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginRight="15sp"
+                                    android:textColor="@color/White"
+                                    android:text="@string/RegisterShiftType"
+                                    android:textAlignment="center"
+                                    android:textSize="20sp"
+                                    android:gravity="center_horizontal">
+
+                                </TextView>
+
+                                <EditText
+                                    android:id="@+id/OWSLAWorkerShiftType"
+                                    android:layout_width="160sp"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:inputType="none"
+                                    android:clickable="false"
+                                    android:maxLines="1"
+                                    android:imeOptions="actionNext"
+                                    android:textAlignment="center"
+                                    android:textColor="@color/White"
+                                    android:textSize="25sp"
+                                    android:background="@color/BlackTransparent">
+
+                                </EditText>
+
+                            </LinearLayout>//WorkHours
+
+                        </LinearLayout>//sixteenth Row
+
                     </LinearLayout>
 
 
