Finished Algorithm SORT OF MAYBE PERHAPS ... I MuSt SaY nO

--- a/app/src/main/res/layout-xlarge-land/activity_log_reg.xml
+++ b/app/src/main/res/layout-xlarge-land/activity_log_reg.xml
@@ -919,6 +919,8 @@
                                 android:id="@+id/RegisterShiftType"
                                 android:layout_width="160sp"
                                 android:layout_height="wrap_content"
+                                android:clickable="false"
+                                android:focusable="false"
                                 android:gravity="center"
                                 android:maxLines="1"
                                 android:imeOptions="actionDone"
