--- a/app/src/main/res/layout/activity_owsla_worker.xml
+++ b/app/src/main/res/layout/activity_owsla_worker.xml
@@ -764,6 +764,7 @@
                                     android:gravity="center"
                                     android:inputType="none"
                                     android:clickable="false"
+                                    android:focusable="false"
                                     android:maxLines="1"
                                     android:imeOptions="actionNext"
                                     android:textAlignment="center"
@@ -809,6 +810,7 @@
                                     android:gravity="center"
                                     android:inputType="none"
                                     android:clickable="false"
+                                    android:focusable="false"
                                     android:maxLines="1"
                                     android:imeOptions="actionNext"
                                     android:textAlignment="center"
