--- a/app/src/main/res/layout-xlarge-land/activity_owsla_worker.xml
+++ b/app/src/main/res/layout-xlarge-land/activity_owsla_worker.xml
@@ -808,7 +808,8 @@
                             android:layout_height="wrap_content"
                             android:text="@string/RegisterConfirm"
                             android:textAlignment="center"
-                            android:gravity="center_horizontal">
+                            android:gravity="center_horizontal"
+                            android:visibility="invisible">
 
                         </Button>
 
