--- a/app/src/main/res/layout-xlarge-land/activity_log_reg.xml
+++ b/app/src/main/res/layout-xlarge-land/activity_log_reg.xml
@@ -1031,7 +1031,7 @@
                             android:id="@+id/ForgetSend"
                             android:layout_width="wrap_content"
                             android:layout_height="50sp"
-                            android:text="@string/Log">
+                            android:text="@string/ForgetSend">
 
                         </Button>//ForgetSend
 
